Fix coundown number visibility

--- a/kdyfilmy/style.css
+++ b/kdyfilmy/style.css
@@ -4,8 +4,8 @@
 html {
     --black: #000000;
     --white: #ffffff;
-    --transparent-black: rgba(0, 0, 0, 0.3);
-    --shadow-grey: rgba(255, 255, 255, 0.5);
+    --transparent-black: rgba(0, 0, 0, 0.65);
+    --shadow-grey: rgba(255, 255, 255, 0.65);
     --purple: #9648FF;
     --purple-dark: #6832b0;
     --red: #ff0000;
@@ -147,7 +147,7 @@ body {
 }
 
 .delta-days3 {
-    font-size: 5rem;
+    font-size: 6rem;
 }
 
 .links {
